test(GX3-5785): add new automated test for Buzz - interacts with Likes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,8 @@
 		"@typescript-eslint/consistent-type-imports": "error",
 		"@typescript-eslint/no-misused-promises": "error",
 		"@typescript-eslint/naming-convention": ["warn"],
-		"@typescript-eslint/no-unsafe-argument": ["warn"],
-		"@typescript-eslint/no-unsafe-assignment": ["warn"],
+		"@typescript-eslint/no-unsafe-argument": "off",
+		"@typescript-eslint/no-unsafe-assignment": "off",
 		"arrow-spacing": ["warn", { "before": true, "after": true }],
 		"brace-style": ["warn", "1tbs", { "allowSingleLine": true }],
 		"curly": ["error", "multi-line"],
