--- a/.github/workflows/sanity-verogeid-GX3-5565.yml
+++ b/.github/workflows/sanity-verogeid-GX3-5565.yml
@@ -14,7 +14,7 @@ run-name: ${{github.actor}}👨🏻‍🔬 triggered SanityTest in ${{github.ref
 
 on:
   push:
-    branches: ['test/GX3-5552/ToolsQA-Radio-Buttons'] #! Cambia "TuBranchAqui" por el nombre de tu rama de tarea.
+    branches: [ 'test/GX3-5565/ToolsQA-Buttons' ] #! Cambia "TuBranchAqui" por el nombre de tu rama de tarea.
   workflow_dispatch:
 
 
@@ -42,8 +42,8 @@ jobs:
       uses: cypress-io/github-action@v4
       with:
         browser: chrome
-        command: | #todo: GX3-5552-Radio-Buttons.cy.js:
-          bun run test:chrome cypress/e2e/Tests/Elements/GX3-5552-Radio-Buttons.cy.js
+        command: | #todo: GX3-5565-Buttons.cy.js:
+          bun run test:chrome cypress/e2e/Tests/Elements/GX3-5565-Buttons.cy.js
     - name: 📬Generate JUnit/Mocha Report
       if: always()
       run: |
@@ -52,12 +52,13 @@ jobs:
     - name: ✅Import Test Results to Xray
       if: env.XRAY_CLIENT != '' && env.XRAY_SECRET != '' #? Corre este paso si las variables de entorno están definidas
       uses: mikepenz/xray-action@v3
-      with: #OPCIONES PARA IMPORTAR LOS RESULTADOS DE PRUEBA A JIRA XRAY:
+      with:
+        #OPCIONES PARA IMPORTAR LOS RESULTADOS DE PRUEBA A JIRA XRAY:
         username: ${{secrets.XRAY_CLIENT_ID}}
         password: ${{secrets.XRAY_CLIENT_SECRET}}
         testFormat: 'junit' #! NO CAMBIAR
         testPaths: 'cypress/tests_results/junit/chrome_regression_report.xml' #! NO CAMBIAR
-        testExecKey: 'GX3-5552' #todo: EDITAR AQUÍ EL TEST EXECUTION A IMPORTAR LAS PRUEBAS.
+        testExecKey: 'GX3-5565' #todo: EDITAR AQUÍ EL TEST EXECUTION A IMPORTAR LAS PRUEBAS.
         projectKey: 'GX3' #todo: EDITAR EN CASO DE TRABAJAR CON OTRO PROYECTO.
       env:
         XRAY_CLIENT: ${{ secrets.XRAY_CLIENT_SECRET }}
