--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules/
 .env
-cypress/tests_results
-cypress/tests_reports
-mochawesome-report
+# cypress/tests_results
+# cypress/tests_reports
+# mochawesome-report
 cypress/screenshots
 cypress/downloads
 cypress/videos
