feat: Added a helper library to handle DataBases 	new file:   cypress/support/helper/DbHandler.ts 	new file:   package-lock.json 	modified:   package.json 	modified:   tsconfig.json 	modified:   yarn.lock

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"resolveJsonModule": true,
 		"strict": true,
 		"target": "ESNext",
-		"verbatimModuleSyntax": true,
+		"verbatimModuleSyntax": false,
 		"lib": ["es5", "dom"],
 		"types": ["cypress-file-upload", "cypress-plugin-api", "cypress-plugin-steps", "cypress", "node", "@4tw/cypress-drag-drop"],
 		"baseUrl": ".",
